# summarize

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
k8s/: deployment.yaml  service.yaml
src/: app.py  constants.py  exceptions.py  summarize_document.py  utils.py
tests/: test_summarize_document.py  test_utils.py
